Made alert flash more visible. Fixes #81

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -48,6 +48,9 @@ $base-body-color: white
 @import components/hour-listing
 
 
+p#alert
+  font-size: 20px
+  color: red
 
 .hidden
   display: none
